--- a/client/src/components/Register/Register.module.css
+++ b/client/src/components/Register/Register.module.css
@@ -1,32 +1,38 @@
 .parent {
-  height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-self: center;
+  height: 100vh;
 }
 
-.login {
+.container {
   border: 2px solid whitesmoke;
-  box-shadow: 2px 2px rgba(255, 255, 255, 0.377) smoke;
+  border-radius: 20px;
+  padding: 20px;
+  width: 300px;
 }
 
-.form-control {
+.heading {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.formControl {
   display: flex;
   flex-direction: column;
 }
 
-.form-control label {
+.formControl label {
   margin: 5px 0px 5px 0px;
+  font-size: 1.25rem;
 }
 
-.form-control input {
+.formControl input {
   border: 2px solid whitesmoke;
   border-radius: 20px;
   padding: 10px;
-}
-
-.form-control input:focus {
-  border: none;
 }
 
 .buttons {
@@ -44,16 +50,16 @@
   cursor: pointer;
 }
 
-.sign-in {
+.primary {
   font-size: 1.5rem;
   background-color: mediumseagreen;
 }
 
-.sign-in:hover {
+.primary:hover {
   background-color: rgba(60, 179, 114, 0.473);
 }
 
-.register {
+.secondary {
   margin-left: auto;
   margin-right: auto;
   width: 100px;
@@ -61,6 +67,6 @@
   background-color: rgb(33, 135, 218);
 }
 
-.register:hover {
+.secondary:hover {
   background-color: rgba(33, 135, 218, 0.473);
 }
