--- a/client/src/components/Chat/components/ChatWindow/ChatWindow.module.css
+++ b/client/src/components/Chat/components/ChatWindow/ChatWindow.module.css
@@ -1,13 +1,22 @@
 .parent {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr 50px;
   height: 100%;
 }
 
+.chatAreaParent {
+  position: relative;
+}
+
 .chatArea {
-  flex: 1;
   display: flex;
   flex-direction: column-reverse;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  overflow: auto;
 }
 
 .chatBar {
