--- a/client/src/components/Chat/components/Header/Header.module.css
+++ b/client/src/components/Chat/components/Header/Header.module.css
@@ -23,6 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 }
 
 .dropdownList {
@@ -30,7 +31,7 @@
   border-radius: 20px;
   background-color: rgb(36, 36, 36);
   border: 1px solid whitesmoke;
-  cursor: default;
+  z-index: 10;
 }
 
 .dropdownList li {
